--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dashboard -- webpack-dev-server"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -27,6 +27,7 @@
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "webpack": "^3.8.1",
+    "webpack-dashboard": "^1.0.2",
     "webpack-dev-server": "^2.9.5",
     "webpack-merge": "^4.1.1"
   }
